[gd_scene load_steps=35 format=2]

[ext_resource path="res://sprites/whgggg.png" type="Texture" id=1]
[ext_resource path="res://scripts/Node2D.gd" type="Script" id=2]
[ext_resource path="res://scripts/KinematicBody2D.gd" type="Script" id=3]
[ext_resource path="res://sprites/direita.png" type="Texture" id=4]
[ext_resource path="res://sprites/baixo.png" type="Texture" id=5]
[ext_resource path="res://sprites/esquerda.png" type="Texture" id=6]
[ext_resource path="res://sprites/cima.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 9.5, 9.5 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 5, 4.5 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 1800, -3200, -1800, -3200 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, 0, -1800, 3200, 1800, 3200 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 0, 0, 1800, 3200, 1800, -3200 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 0, 0, -1800, 3200, -1800, -3200 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 0, 0, 0, 640, 17, 13, 359, 0 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 359, 13, 27, 12, 356, 0 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 0, 9, 14, 9, 14, 640, 0, 640 )

[sub_resource type="ConvexPolygonShape2D" id=24]
points = PoolVector2Array( 360.8, 640, 346.944, 640, 346.944, 12.9167, 360.8, 12.9167 )

[sub_resource type="ConvexPolygonShape2D" id=25]
points = PoolVector2Array( 357.2, 640, 14, 640, 14, 626, 357.2, 626 )

[sub_resource type="ConvexPolygonShape2D" id=26]
points = PoolVector2Array( 200.069, 158.981, 190.231, 158.981, 190.231, 13.7269, 200.069, 13.7269 )

[sub_resource type="ConvexPolygonShape2D" id=27]
points = PoolVector2Array( 0, 150.301, 97.0602, 150.301, 97.0602, 157.824, 0, 157.824 )

[sub_resource type="ConvexPolygonShape2D" id=28]
points = PoolVector2Array( 191.968, 157.824, 160.718, 157.824, 160.718, 148.565, 191.968, 148.565 )

[sub_resource type="ConvexPolygonShape2D" id=29]
points = PoolVector2Array( 271.829, 172.292, 261.991, 172.292, 261.991, 124.259, 271.829, 124.259 )

[sub_resource type="ConvexPolygonShape2D" id=30]
points = PoolVector2Array( 348.796, 133.518, 268.356, 133.518, 268.356, 124.259, 348.796, 124.259 )

[sub_resource type="ConvexPolygonShape2D" id=31]
points = PoolVector2Array( 190.81, 255.046, 201.806, 255.046, 201.806, 366.157, 190.81, 366.157 )

[sub_resource type="ConvexPolygonShape2D" id=32]
points = PoolVector2Array( 0, 254.468, 190.81, 254.468, 190.81, 265.463, 0, 265.463 )

[sub_resource type="ConvexPolygonShape2D" id=33]
points = PoolVector2Array( 271.829, 397.407, 261.412, 397.407, 261.412, 250.417, 271.829, 250.417 )

[sub_resource type="ConvexPolygonShape2D" id=34]
points = PoolVector2Array( 352.847, 397.407, 271.829, 397.407, 271.829, 387.569, 352.847, 387.569 )

[sub_resource type="ConvexPolygonShape2D" id=35]
points = PoolVector2Array( 201.227, 463.958, 190.81, 463.958, 190.81, 438.495, 201.227, 438.495 )

[sub_resource type="ConvexPolygonShape2D" id=36]
points = PoolVector2Array( 201.227, 465.116, 13.1481, 465.116, 13.1481, 454.699, 201.227, 454.699 )

[sub_resource type="ConvexPolygonShape2D" id=37]
points = PoolVector2Array( 351.111, 547.292, 326.227, 547.292, 326.227, 536.296, 351.111, 536.296 )

[sub_resource type="ConvexPolygonShape2D" id=38]
points = PoolVector2Array( 238.843, 546.991, 96.4814, 546.991, 96.4814, 537.153, 238.843, 537.153 )

[sub_resource type="ConvexPolygonShape2D" id=39]
points = PoolVector2Array( 105.741, 636.69, 95.324, 636.69, 95.324, 537.153, 105.741, 537.153 )

[sub_resource type="TileSet" id=20]
0/name = "whgggg.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 384, 640 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 21 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 24 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 25 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 26 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 27 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 28 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 29 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 30 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 31 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 32 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 33 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 34 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 35 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 36 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 37 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 38 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 39 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 76, 32 )

[node name="WHG" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 360.0
margin_bottom = 640.0
color = Color( 0.807843, 0.807843, 0.807843, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 3
collision_mask = 11
script = ExtResource( 3 )

[node name="Icon" type="ColorRect" parent="KinematicBody2D"]
margin_left = 48.0
margin_top = 563.0
margin_right = 67.0
margin_bottom = 582.0
color = Color( 0.443137, 0.92549, 0, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 57.5, 572.5 )
shape = SubResource( 9 )

[node name="key" type="Node" parent="."]

[node name="KeyCheck" type="ColorRect" parent="key"]
visible = false
margin_left = 302.0
margin_top = 18.0
margin_right = 325.0
margin_bottom = 41.0
color = Color( 1, 0.584314, 0, 1 )

[node name="key" type="StaticBody2D" parent="key"]
position = Vector2( 261, 499 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="key/key"]
margin_left = -5.0
margin_top = -4.0
margin_right = 8.0
margin_bottom = 8.0
color = Color( 1, 0.537255, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="key/key"]
position = Vector2( 1.5, 2 )
shape = SubResource( 10 )

[node name="Controles" type="Node" parent="."]

[node name="Cima" type="TouchScreenButton" parent="Controles"]
position = Vector2( 180, 320 )
scale = Vector2( 0.1, 0.1 )
normal = ExtResource( 7 )
shape = SubResource( 16 )

[node name="Baixo" type="TouchScreenButton" parent="Controles"]
position = Vector2( 180, 320 )
scale = Vector2( 0.1, 0.1 )
normal = ExtResource( 5 )
shape = SubResource( 17 )

[node name="Direita" type="TouchScreenButton" parent="Controles"]
position = Vector2( 180, 320 )
scale = Vector2( 0.1, 0.1 )
normal = ExtResource( 4 )
shape = SubResource( 18 )

[node name="Esquerda" type="TouchScreenButton" parent="Controles"]
position = Vector2( 180, 320 )
scale = Vector2( 0.1, 0.1 )
normal = ExtResource( 6 )
shape = SubResource( 19 )

[node name="Label" type="Label" parent="."]
margin_left = 77.0
margin_top = 13.0
margin_right = 296.0
margin_bottom = 45.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Pegue os blocos laranjas(chaves)"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="FundoPause" type="Sprite" parent="."]
pause_mode = 2
visible = false
position = Vector2( 15, 20 )
z_index = 2

[node name="ColorRect2" type="ColorRect" parent="FundoPause"]
margin_left = -40.0
margin_top = -32.0
margin_right = 419.0
margin_bottom = 680.0

[node name="Button2" type="Button" parent="FundoPause"]
anchor_right = 86.0
margin_left = 100.0
margin_top = 139.0
margin_right = 150.0
margin_bottom = 177.0
text = "voltar"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HSlider" type="HSlider" parent="FundoPause"]
margin_left = 57.0
margin_top = 234.0
margin_right = 269.0
margin_bottom = 292.0

[node name="Label" type="Label" parent="FundoPause"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 64.0
margin_top = 33.0
margin_right = 270.0
margin_bottom = 47.0

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
tile_set = SubResource( 20 )
format = 1
tile_data = PoolIntArray( 0, 0, 0 )

[node name="Pausar" type="Button" parent="."]
margin_left = 24.0
margin_top = -8.0
margin_right = 91.0
margin_bottom = 39.0
text = "pause"

[node name="Compliance" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Compliance"]
position = Vector2( 101, 99 )
shape = SubResource( 40 )

[connection signal="pressed" from="Controles/Cima" to="KinematicBody2D" method="_on_Cima_pressed"]
[connection signal="released" from="Controles/Cima" to="KinematicBody2D" method="_on_Cima_released"]
[connection signal="pressed" from="Controles/Baixo" to="KinematicBody2D" method="_on_Baixo_pressed"]
[connection signal="released" from="Controles/Baixo" to="KinematicBody2D" method="_on_Baixo_released"]
[connection signal="pressed" from="Controles/Direita" to="KinematicBody2D" method="_on_Direita_pressed"]
[connection signal="released" from="Controles/Direita" to="KinematicBody2D" method="_on_Direita_released"]
[connection signal="pressed" from="Controles/Esquerda" to="KinematicBody2D" method="_on_Esquerda_pressed"]
[connection signal="released" from="Controles/Esquerda" to="KinematicBody2D" method="_on_Esquerda_released"]
[connection signal="pressed" from="FundoPause/Button2" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="FundoPause/Button2" to="." method="_on_Button2_pressed"]
[connection signal="value_changed" from="FundoPause/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Pausar" to="." method="_on_Pausar_pressed"]
[connection signal="body_shape_entered" from="Compliance" to="KinematicBody2D" method="_on_Compliance_body_shape_entered"]
